[package]
name = "did"
version.workspace = true
edition.workspace = true


[features]
export-api = []

[dependencies]
bitcoin = { workspace = true }
candid = { workspace = true }
ord-rs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
