[package]
name = "erc20-bridge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
bridge-canister = { path = "../bridge-canister" }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
drop_guard = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
