[package]
name = "evm-minter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
minter-contract-utils = { path = "../minter-contract-utils" }
did = { workspace = true }
ic-metrics = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-storage = { workspace = true }
ic-stable-structures = { workspace = true }
ic-task-scheduler = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = ["ic-canister-client"] }
ic-canister-client = { workspace = true }
jsonrpc-core = { workspace = true }
anyhow = { workspace = true }
ethers-core = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
minter-did = { workspace = true }
ic-log = { workspace = true }