[package]
name = "icrc2-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
bridge-canister = { path = "../bridge-canister" }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
evm-canister-client = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
icrc-client = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true }
