[package]
name = "icrc2-minter"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
] }
evm-canister-client = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-task-scheduler = { workspace = true }
ic-storage = { workspace = true }
icrc-client = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
