[package]
name = "inscriber"
version.workspace = true
edition.workspace = true


[features]
export-api = []

[dependencies]
async-trait = { workspace = true }
bitcoin = { version = "0.31", features = ["serde"] }
bs58 = "0.5"
candid = { workspace = true }
ethers-core = { workspace = true }
evm-sdk-did = { git = "https://github.com/bitfinity-network/bitfinity-evm-sdk", package = "did", tag = "v0.14.x" }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
jsonrpc-core = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa"] }
log = { workspace = true }
ord-rs = { git = "https://github.com/bitfinity-network/ord-rs.git" }
ripemd = "0.1"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
rand = { workspace = true, features = ["getrandom"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = { version = "0.2" }

[build-dependencies]
vergen = { workspace = true }
