[package]
name = "inscriber"
version.workspace = true
edition.workspace = true


[features]
export-api = []

[dependencies]
async-trait = { workspace = true }
bitcoin = { version = "0.31", features = ["serde"] }
bs58 = "0.5"
candid = { workspace = true }
ethers-core = { workspace = true }
did = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-crypto-getrandom-for-wasm", tag = "v0.15.x" }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
jsonrpc-core = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa"] }
log = { workspace = true }
ord-rs = { git = "https://github.com/bitfinity-network/ord-rs.git" }
ripemd = "0.1"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
