[package]
name = "inscription_canister"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-crypto-getrandom-for-wasm = { workspace = true }
bitcoin = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ord-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
