[package]
name = "inscription_canister"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-crypto-getrandom-for-wasm = { workspace = true }
bitcoin = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ord-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = "0.5.0"
ripemd = "0.1.3"
sha2 = "0.10.8"
hex = "0.4.3"
