[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-sol-types = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoincore-rpc = { workspace = true }
bridge-canister = { path = "../bridge-canister" }
bridge-client = { path = "../bridge-client" }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
ethers-core = { workspace = true }
evm-canister-client = { workspace = true }
hex = { workspace = true }
ic-btc-interface = { workspace = true }
ic-canister-client = { workspace = true, features = [
  "pocket-ic-client",
  "ic-agent-client",
] }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-client = { workspace = true }
icrc2_bridge = { path = "../icrc2-bridge" }
once_cell = { workspace = true }
ord-rs = { workspace = true, features = ["rune"] }
ordinals = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

# state machine tests deps
ic-base-types = { workspace = true, optional = true }
ic-bitcoin-canister-mock = { workspace = true, optional = true }
ic-canisters-http-types = { workspace = true, optional = true }
ic-ckbtc-kyt = { workspace = true, optional = true }
ic-ckbtc-minter = { workspace = true, optional = true }
ic-config = { workspace = true, optional = true }
ic-icrc1-ledger = { workspace = true, optional = true }
ic-management-canister-types = { workspace = true, optional = true }
ic-state-machine-tests = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
brc20_bridge = { path = "../brc20-bridge" }
btc_bridge = { path = "../btc-bridge" }
dirs = { workspace = true }
erc20_bridge = { path = "../erc20-bridge" }
ic-test-utils = { workspace = true }
ic-utils = { workspace = true }
lazy-regex = { workspace = true }
rune_bridge = { path = "../rune-bridge" }
serial_test = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
tokio-util = { workspace = true }
trycmd = { workspace = true }
wildmatch = { workspace = true }

# IC deps
[features]
pocket_ic_integration_test = []
state_machine_tests = [
  "ic-config",
  "ic-base-types",
  "ic-bitcoin-canister-mock",
  "ic-canisters-http-types",
  "ic-ckbtc-minter",
  "ic-ckbtc-kyt",
  "ic-icrc1-ledger",
  "ic-management-canister-types",
  "ic-state-machine-tests",
]
dfx_tests = []
