[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
async-trait = { workspace = true }
bip39 = { workspace = true }
bitcoin = { workspace = true, features = ["rand-std"] }
bitcoincore-rpc = { workspace = true }
bridge-canister = { path = "../bridge-canister" }
bridge-client = { path = "../bridge-client" }
bridge-did = { path = "../bridge-did" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
evm-canister-client = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-btc-interface = { workspace = true }
ic-canister-client = { workspace = true, features = [
  "pocket-ic-client",
  "ic-agent-client",
] }
ic-ckbtc-kyt = { workspace = true }
ic-ckbtc-minter = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-client = { workspace = true }
icrc2_bridge = { path = "../icrc2-bridge" }
once_cell = { workspace = true }
ord-rs = { workspace = true, features = ["rune"] }
ordinals = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
brc20_bridge = { path = "../brc20-bridge" }
btc_bridge = { path = "../btc-bridge" }
dirs = { workspace = true }
erc20_bridge = { path = "../erc20-bridge" }
ic-test-utils = { workspace = true }
ic-utils = { workspace = true }
lazy-regex = { workspace = true }
rune_bridge = { path = "../rune-bridge" }
serial_test = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
tokio-util = { workspace = true }
trycmd = { workspace = true }
wildmatch = { workspace = true }

# IC deps
[features]
bitfinity_evm = []
dfx_tests = []
pocket_ic_integration_test = []
