[package]
name = "minter_canister"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
did = { workspace = true }
minter-did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
evm-canister-client = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-recursion = "1.0.4"

[dev-dependencies]
mockall = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
