[package]
name = "minter-contract-utils"
version.workspace = true
edition.workspace = true

[features]
test-contracts = []

[dependencies]
ethers-core = { workspace = true }
did = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-stable-structures = { workspace = true }
minter-did = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
jsonrpc-core = { workspace = true }
ic-canister-client = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
    "http-outcall",
] }
evm-canister-client = { workspace = true }
eth-signer = { workspace = true }
anyhow = { workspace = true }


[build-dependencies]
solidity-helper = { path = "../solidity-helper" }
anyhow = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
ic-exports = { workspace = true }
solidity-helper = { path = "../solidity-helper" }
