[package]
name = "minter-contract-utils"
version.workspace = true
edition.workspace = true

[features]
test-contracts = []

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
    "http-outcall",
] }
ethers-core = { workspace = true }
evm-canister-client = { workspace = true }
hex = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true }
ic-stable-structures = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-did = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ic-task-scheduler = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
solidity-helper = { path = "../solidity-helper" }


[dev-dependencies]
candid = { workspace = true }
env_logger = { workspace = true }
ic-exports = { workspace = true }
serde_json = { workspace = true }
solidity-helper = { path = "../solidity-helper" }
tokio = { workspace = true }
