[package]
name = "minter-contract-utils"
version.workspace = true
edition.workspace = true

[features]
test-contracts = []
export-api = []

[dependencies]
anyhow = { workspace = true }
ethers-core = { workspace = true }
did = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-stable-structures = { workspace = true }
bridge-did = { path = "../bridge-did" }
minter-did = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpc-core = { workspace = true }
ic-storage = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true }
ic-metrics = { workspace = true }
ic-task-scheduler = { workspace = true }
ic-log = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
    "http-outcall",
] }
evm-canister-client = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
log = { workspace = true }


[build-dependencies]
solidity-helper = { path = "../solidity-helper" }
anyhow = { workspace = true }
vergen = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
env_logger = { workspace = true }
ic-exports = { workspace = true }
solidity-helper = { path = "../solidity-helper" }
tokio = { workspace = true }
