[package]
name = "rune-bridge"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
log = { workspace = true }
minter-did = { workspace = true, features = ["runes"] }
minter-contract-utils = { path = "../minter-contract-utils" }
ord-rs = { workspace = true, features = ["rune"] }
ordinals = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
