[package]
name = "rune-bridge"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true, features = ["rand-std"] }
bridge-did = { path = "../bridge-did", features = ["runes"] }
bridge-canister = { path = "../bridge-canister" }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true, features = ["canister"] }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
log = { workspace = true }
ord-rs = { workspace = true, features = ["rune"] }
ordinals = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snapbox = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
