[package]
name = "rune_bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
export-api = []

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
bridge-canister = { path = "../bridge-canister" }
bridge-did = { path = "../bridge-did", features = ["runes"] }
bridge-utils = { path = "../bridge-utils" }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
ic-log = { workspace = true, features = ["canister"] }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
ic-task-scheduler = { workspace = true }
log = { workspace = true }
ord-rs = { workspace = true, features = ["rune"], default-features = false }
ordinals = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bitcoin = { workspace = true, features = ["rand-std"] }
ethers-core = { workspace = true }
rand = { workspace = true }
snapbox = { workspace = true }
tokio = { workspace = true }
