[package]
name = "upgrader"
version.workspace = true
edition.workspace = true


[features]
default = []
export-api = []

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true, features = ["ic_sign"] }
ethers-core = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "ic-canister-client",
] }
evm-canister-client = { workspace = true }
hex = { workspace = true }
ic-canister = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-helpers = { workspace = true, features = ["management_canister"]}
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-task-scheduler = { workspace = true }
ic-storage = { workspace = true }
icrc-client = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
minter-contract-utils = { path = "../minter-contract-utils" }
minter-did = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
icrc2-minter = { path = "../icrc2-minter" }
erc20-minter = { path = "../erc20-minter" }